force-app/main/default/objects/Lead/fields/AF_AssignedDateTime__c.field-meta.xml
<CustomField>
    <fullName>AF_AssignedDateTime__c</fullName>
    <description>SLA clock anchor — proposed as queue-assignment time rather than creation time.</description>
    <label>Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>