force-app/main/default/objects/Lead/fields/AF_CampaignName__c.field-meta.xml
<CustomField>
    <fullName>AF_CampaignName__c</fullName>
    <label>Campaign Name / Attribution</label>
    <length>120</length>
    <type>Text</type>
</CustomField>