force-app/main/default/objects/Lead/fields/AF_ContactValidity__c.field-meta.xml
<CustomField>
    <fullName>AF_ContactValidity__c</fullName>
    <label>Contact Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reachable</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>