force-app/main/default/objects/Lead/fields/AF_DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>AF_DateOfBirth__c</fullName>
    <description>No standard equivalent on Lead. Carries forward to Account.AF_DateOfBirth__c on conversion.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>