force-app/main/default/objects/Lead/fields/AF_DisqualificationNotes__c.field-meta.xml
<CustomField>
    <fullName>AF_DisqualificationNotes__c</fullName>
    <label>Disqualification Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>