force-app/main/default/objects/Lead/fields/AF_DisqualificationReason__c.field-meta.xml
<CustomField>
    <fullName>AF_DisqualificationReason__c</fullName>
    <description>Confirmed — BRD ALF-LM-07 #1.</description>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Wrong Inquiry</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Not Genuine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>