force-app/main/default/objects/Lead/fields/AF_FirstContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>AF_FirstContactDateTime__c</fullName>
    <label>First Contact Date/Time</label>
    <type>DateTime</type>
</CustomField>