force-app/main/default/objects/Lead/fields/AF_FormCode__c.field-meta.xml
<CustomField>
    <fullName>AF_FormCode__c</fullName>
    <description>Website form identifier from the digital intake contract. Field-set inventory TBP with MuleSoft.</description>
    <label>Form Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>