force-app/main/default/objects/Lead/fields/AF_IntegrationLastError__c.field-meta.xml
<CustomField>
    <fullName>AF_IntegrationLastError__c</fullName>
    <label>Integration Last Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>