force-app/main/default/objects/Lead/fields/AF_InterestedInTestDrive__c.field-meta.xml
<CustomField>
    <fullName>AF_InterestedInTestDrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Test Drive</label>
    <type>Checkbox</type>
</CustomField>