force-app/main/default/objects/Lead/fields/AF_IsSuppressedDuplicate__c.field-meta.xml
<CustomField>
    <fullName>AF_IsSuppressedDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Suppressed Duplicate</label>
    <type>Checkbox</type>
</CustomField>