force-app/main/default/objects/Lead/fields/AF_KeyloopLeadRef__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopLeadRef__c</fullName>
    <externalId>true</externalId>
    <label>Keyloop Lead Reference</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>