force-app/main/default/objects/Lead/fields/AF_LeadChannel__c.field-meta.xml
<CustomField>
    <fullName>AF_LeadChannel__c</fullName>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>