force-app/main/default/objects/Lead/fields/AF_Nationality__c.field-meta.xml
<CustomField>
    <fullName>AF_Nationality__c</fullName>
    <description>No standard equivalent on Lead. Qatari listed first, remainder alphabetical. Shares the same global value set as Account.AF_Nationality__c.</description>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AF_Nationality</valueSetName>
    </valueSet>
</CustomField>