force-app/main/default/objects/Lead/fields/AF_NeedsManualReview__c.field-meta.xml
<CustomField>
    <fullName>AF_NeedsManualReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Manual Review</label>
    <type>Checkbox</type>
</CustomField>