force-app/main/default/objects/Lead/fields/AF_OtherIdNumber__c.field-meta.xml
<CustomField>
    <fullName>AF_OtherIdNumber__c</fullName>
    <label>Other ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>