force-app/main/default/objects/Lead/fields/AF_QID__c.field-meta.xml
<CustomField>
    <fullName>AF_QID__c</fullName>
    <description>Captured pre-conversion. Hard uniqueness is enforced on Account.AF_QID__c after conversion, not here.</description>
    <label>Qatar ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>