force-app/main/default/objects/Lead/fields/AF_QualificationOutcome__c.field-meta.xml
<CustomField>
    <fullName>AF_QualificationOutcome__c</fullName>
    <label>Qualification Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>