force-app/main/default/objects/Lead/fields/AF_QualifiedBy__c.field-meta.xml
<CustomField>
    <fullName>AF_QualifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leads Qualified</relationshipLabel>
    <relationshipName>AF_QualifiedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>