force-app/main/default/objects/Lead/fields/AF_QualifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_QualifiedDate__c</fullName>
    <label>Qualified Date</label>
    <type>Date</type>
</CustomField>