force-app/main/default/objects/Lead/fields/AF_Showroom__c.field-meta.xml
<CustomField>
    <fullName>AF_Showroom__c</fullName>
    <description>Walk-in showroom context. Dependent on AF_BusinessUnit__c. Only showroom names confirmed in the LLD are populated (Alsadd, Lusail Boulevard under Alfardan Automobiles); Premier Motors and Sports Motors names are an open item pending customer confirmation.</description>
    <label>Showroom</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AF_BusinessUnit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alsadd</fullName>
            </value>
            <value>
                <fullName>Lusail Boulevard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>