force-app/main/default/objects/Lead/fields/AF_SLA_Target_FinalDisposition__c.field-meta.xml
<CustomField>
    <fullName>AF_SLA_Target_FinalDisposition__c</fullName>
    <description>3 (working) days from SLA clock anchor — value confirmed, unit (working vs calendar days) pending confirmation.</description>
    <label>SLA Target — Final Disposition</label>
    <type>DateTime</type>
</CustomField>