force-app/main/default/objects/Lead/fields/AF_SLA_Target_FirstContact__c.field-meta.xml
<CustomField>
    <fullName>AF_SLA_Target_FirstContact__c</fullName>
    <description>15 minutes from SLA clock anchor — confirmed, BRD ALF-LM-06 #1.</description>
    <label>SLA Target — First Contact</label>
    <type>DateTime</type>
</CustomField>