force-app/main/default/objects/Lead/fields/AF_SLA_Target_SecondCheckpoint__c.field-meta.xml
<CustomField>
    <fullName>AF_SLA_Target_SecondCheckpoint__c</fullName>
    <description>1 hour from SLA clock anchor — confirmed, BRD ALF-LM-06 #2.</description>
    <label>SLA Target — Second Checkpoint</label>
    <type>DateTime</type>
</CustomField>