force-app/main/default/objects/Lead/fields/AF_SLABreachLevel__c.field-meta.xml
<CustomField>
    <fullName>AF_SLABreachLevel__c</fullName>
    <label>SLA Breach Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>First Contact Breach</fullName>
            </value>
            <value>
                <fullName>Second Checkpoint Breach</fullName>
            </value>
            <value>
                <fullName>Final Disposition Breach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>