force-app/main/default/objects/Lead/fields/AF_SLAStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_SLAStatus__c</fullName>
    <label>SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Breached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>