force-app/main/default/objects/Lead/fields/AF_TestDriveDateTime__c.field-meta.xml
<CustomField>
    <fullName>AF_TestDriveDateTime__c</fullName>
    <label>Test Drive Date/Time</label>
    <type>DateTime</type>
</CustomField>