force-app/main/default/objects/Lead/fields/AF_TestDriveLocation__c.field-meta.xml
<CustomField>
    <fullName>AF_TestDriveLocation__c</fullName>
    <label>Test Drive Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>