force-app/main/default/objects/Lead/fields/AF_VehicleOfInterest__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleOfInterest__c</fullName>
    <description>Lightweight picklist, not a catalogue lookup — a caller may only say “an SUV, maybe”. “Undecided” is confirmed as mandatory under every brand; per-brand model lists are TBP. Conversion maps this to Opportunity.AF_VehicleModel__c (a VehicleDefinition lookup) where a confident match exists.</description>
    <label>Vehicle of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AF_Brand__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>