force-app/main/default/objects/Lead/listViews/AF_My_Leads.listView-meta.xml
<ListView>
    <fullName>AF_My_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.PHONE</columns>
    <filterScope>Mine</filterScope>
    <label>My Leads (AF)</label>
</ListView>