force-app/main/default/objects/Lead/listViews/AF_Q_Leads_PremierMotors_Lead.listView-meta.xml
<ListView>
    <fullName>AF_Q_Leads_PremierMotors_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>AF Leads - PremierMotors</label>
    <queue>AF_Q_Leads_PremierMotors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>