force-app/main/default/objects/Lead/listViews/AF_Q_Leads_SportsMotors_Lead.listView-meta.xml
<ListView>
    <fullName>AF_Q_Leads_SportsMotors_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>AF Leads - SportsMotors</label>
    <queue>AF_Q_Leads_SportsMotors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>